add shell command

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,4 +11,5 @@
     ~/.zshrc:
     ~/bin:
 
-- shell: []
+- shell:
+    - [git submodule update --init --depth 1 --recursive, Installing submodules]
