add subversion config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,7 @@
     ~/.gitignore_global:
     ~/.oh-my-zsh:
     ~/.shell:
+    ~/.subversion/config: 'subversion/config'
     ~/.vim:
     ~/.vimrc:
     ~/.zshenv:
