--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim/bundle/souffle.vim"]
+	path = vim/bundle/souffle.vim
+	url = https://github.com/souffle-lang/souffle.vim.git
