add ls color options

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.autojump:
     ~/.colordiffrc:
+    ~/.dir_colors: 'dircolors/dircolors.256dark'
     ~/.emacs.d:
     ~/.gitconfig:
     ~/.gitignore_global:
