add bold version of dircolors.256dark

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,7 @@
 - link:
     ~/.autojump:
     ~/.colordiffrc:
-    ~/.dir_colors: 'dircolors/dircolors.256dark'
+    ~/.dir_colors: 'dircolors/dircolors.256dark-bold'
     ~/.emacs.d:
     ~/.gitconfig:
     ~/.gitignore_global:
