add vim-gitgutter and set vim wrap 120 char

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/souffle.vim"]
 	path = vim/bundle/souffle.vim
 	url = https://github.com/souffle-lang/souffle.vim.git
+[submodule "vim/bundle/vim-gitgutter"]
+	path = vim/bundle/vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
