--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,8 @@
 - link:
     ~/.autojump:
     ~/.colordiffrc:
-    ~/.dir_colors: 'dircolors/dircolors.256dark-bold'
+    # ~/.dir_colors: 'dircolors/dircolors.256dark-bold'
+    ~/.dir_colors: 'dircolors/gruvbox.dircolors'
     ~/.emacs.d:
     ~/.gitconfig:
     ~/.gitignore_global:
