add pep8 config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
 - link:
     ~/.autojump:
     ~/.colordiffrc:
+    ~/.config/pep8 : 'config/pep8'
     # ~/.dir_colors: 'dircolors/dircolors.256dark-bold'
     ~/.dir_colors: 'dircolors/gruvbox.dircolors'
     ~/.emacs.d:
