--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
     ~/.gitconfig:
     ~/.gitignore_global:
     ~/.oh-my-zsh:
+    ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting: 'zsh-syntax-highlighting'
     ~/.shell:
     ~/.subversion/config: 'subversion/config'
     ~/.vim:
