Add fzf and update some script and init files.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
     # ~/.dir_colors: 'dircolors/dircolors.256dark-bold'
     ~/.dir_colors: 'dircolors/gruvbox.dircolors'
     ~/.emacs.d:
+    ~/.fzf:
     ~/.gitconfig:
     ~/.gitignore_global:
     ~/.oh-my-zsh:
@@ -29,3 +30,4 @@
     # the following have to run after linking ~/.gitconfig
     - [git update-submodules, Installing submodules]
     # - [git upgrade-submodules, Upgrade submodules]
+    - [~/.fzf/install, Installing fzf]
