--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,7 +12,6 @@
     # ~/.dir_colors: 'dircolors/dircolors.256dark-bold'
     ~/.dir_colors: 'dircolors/gruvbox.dircolors'
     ~/.emacs.d:
-    ~/.fzf:
     ~/.gitconfig:
     ~/.gitignore_global:
     ~/.oh-my-zsh:
@@ -30,4 +29,4 @@
     # the following have to run after linking ~/.gitconfig
     - [git update-submodules, Installing submodules]
     # - [git upgrade-submodules, Upgrade submodules]
-    - [~/.fzf/install, Installing fzf]
+    - [~/.vim/bundle/fzf/install, Installing fzf]
